提交图片和css引用变更的修改

--- a/baidu/baidu.html
+++ b/baidu/baidu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="baidu.css">
+	<link rel="stylesheet" type="text/css" href="./css/baidu.css">
 </head>
 <body>
 	<header>
@@ -19,7 +19,7 @@
 		<div id="top-right">
 			<a href="">
 				<span>济南&nbsp;</span>
-				<span><img src="tianqi_icon.png"></span>
+				<span><img src="./images/tianqi_icon.png"></span>
 				<span>19&#8451;</span>
 				<span id="span1">良</span>
 			</a>
@@ -38,14 +38,14 @@
 			
 			<a href="">
 				<span id="span2">
-					<img src="touxiang_icon.jpg"></span>
+					<img src="./images/touxiang_icon.jpg"></span>
 				<span>两步Nan</span>
 			</a>
 		</div>
 	</header>
 	<section>
 		<div id="icon">
-			<img src="baidu_icon.png">
+			<img src="./images/baidu_icon.png">
 		</div>
 		<div id="search">
 			<input type="text" name="serachframe">
